# ent/migrate/schema.go
@@ -555,6 +555,7 @@ var (
 		{Name: "refund_no", Type: field.TypeString, Nullable: true},
 		{Name: "refund_amount", Type: field.TypeInt, Nullable: true},
 		{Name: "refund_at", Type: field.TypeTime, Nullable: true},
+		{Name: "points_granted", Type: field.TypeInt, Nullable: true, Default: 0},
 		{Name: "user_id", Type: field.TypeInt},
 		{Name: "post_id", Type: field.TypeInt, Nullable: true},
 		{Name: "product_id", Type: field.TypeInt, Nullable: true},
@@ -567,19 +568,19 @@ var (
 		ForeignKeys: []*schema.ForeignKey{
 			{
 				Symbol:     "pay_orders_users_user",
-				Columns:    []*schema.Column{PayOrdersColumns[23]},
+				Columns:    []*schema.Column{PayOrdersColumns[24]},
 				RefColumns: []*schema.Column{UsersColumns[0]},
 				OnDelete:   schema.NoAction,
 			},
 			{
 				Symbol:     "pay_orders_posts_post",
-				Columns:    []*schema.Column{PayOrdersColumns[24]},
+				Columns:    []*schema.Column{PayOrdersColumns[25]},
 				RefColumns: []*schema.Column{PostsColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
 			{
 				Symbol:     "pay_orders_products_product",
-				Columns:    []*schema.Column{PayOrdersColumns[25]},
+				Columns:    []*schema.Column{PayOrdersColumns[26]},
 				RefColumns: []*schema.Column{ProductsColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
